<resources>
    <string name="app_name">Ads.lk</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Advanced Search</string>
    <string name="title_postAd">Post an Ad</string>
    <string name="title_categories">Categories</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
