<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.damishs.ads_lk.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.damishs.ads_lk.ui.category.CategoryFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.damishs.ads_lk.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.damishs.ads_lk.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.damishs.ads_lk.ui.postAd.PostAdFragment"
        android:label="@string/title_postAd"
        tools:layout="@layout/fragment_post_ad" />
</navigation>